--- a/.github/workflows/accessibility-check.yml
+++ b/.github/workflows/accessibility-check.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  pull-requests: write
+  contents: read
+
 jobs:
   analyze-diff:
     runs-on: ubuntu-latest
