--- a/.github/workflows/accessibility-check.yml
+++ b/.github/workflows/accessibility-check.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Pass Diff to Python Script
         run: |
-          python -m ./a11y_bot/check_diff.py ./a11y_bot/pr.diff
+          python -m a11y_bot.check_diff ./a11y_bot/pr.diff
 
       - name: Post Comment to PR
         if: always()
