--- a/.github/workflows/accessibility-check.yml
+++ b/.github/workflows/accessibility-check.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install openai
+
       - name: Fetch PR Diff
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -28,6 +33,8 @@ jobs:
           gh pr diff ${{ github.event.pull_request.number }} --color=never > ./a11y_bot/pr.diff
 
       - name: Pass Diff to Python Script
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           python -m a11y_bot.check_diff ./a11y_bot/pr.diff
 
